--- a/src/main/java/gui/HowManyServants.fxml
+++ b/src/main/java/gui/HowManyServants.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,6 +8,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="94.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.BoardController">
    <children>
       <Label layoutX="70.0" layoutY="23.0" prefHeight="35.0" prefWidth="456.0" text="How many servants do you want to use?" />
-      <TextArea fx:id="servantToUse" layoutX="342.0" layoutY="19.0" onKeyPressed="#setValueWithServant" prefHeight="35.0" prefWidth="8.0" />
+      <TextArea fx:id="servantToUse" layoutX="342.0" layoutY="19.0" prefHeight="35.0" prefWidth="8.0" />
+      <Button fx:id="ok" layoutX="422.0" layoutY="27.0" mnemonicParsing="false" onAction="#setValueWithServant" onMouseClicked="#setValueWithServant" text="OK" />
    </children>
 </AnchorPane>
