--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -9,6 +9,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1120.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.BoardController">
    <children>
+      <ImageView fitHeight="736.0" fitWidth="1120.0">
+         <image>
+            <Image url="@../Images/background.jpg" />
+         </image>
+      </ImageView>
       <ImageView fitHeight="303.0" fitWidth="51.0" layoutX="565.0" layoutY="432.0">
          <image>
             <Image url="@../Images/personalbonustile.png" />
@@ -89,27 +94,27 @@
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="294.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="346.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="387.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace1" fitHeight="27.0" fitWidth="16.0" layoutX="286.0" layoutY="411.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace2" fitHeight="27.0" fitWidth="16.0" layoutX="300.0" layoutY="411.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace3" fitHeight="27.0" fitWidth="16.0" layoutX="314.0" layoutY="411.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace4" fitHeight="27.0" fitWidth="16.0" layoutX="338.0" layoutY="411.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace5" fitHeight="27.0" fitWidth="16.0" layoutX="353.0" layoutY="411.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace6" fitHeight="27.0" fitWidth="16.0" layoutX="367.0" layoutY="411.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace7" fitHeight="27.0" fitWidth="16.0" layoutX="294.0" layoutY="434.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace8" fitHeight="27.0" fitWidth="16.0" layoutX="306.0" layoutY="434.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace9" fitHeight="27.0" fitWidth="16.0" layoutX="322.0" layoutY="434.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace10" fitHeight="27.0" fitWidth="16.0" layoutX="338.0" layoutY="434.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace11" fitHeight="27.0" fitWidth="16.0" layoutX="352.0" layoutY="434.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace12" fitHeight="27.0" fitWidth="16.0" layoutX="367.0" layoutY="432.0"  pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace1" fitHeight="27.0" fitWidth="16.0" layoutX="286.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace2" fitHeight="27.0" fitWidth="16.0" layoutX="300.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace3" fitHeight="27.0" fitWidth="16.0" layoutX="314.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace4" fitHeight="27.0" fitWidth="16.0" layoutX="338.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace5" fitHeight="27.0" fitWidth="16.0" layoutX="353.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace6" fitHeight="27.0" fitWidth="16.0" layoutX="367.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace7" fitHeight="27.0" fitWidth="16.0" layoutX="294.0" layoutY="434.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace8" fitHeight="27.0" fitWidth="16.0" layoutX="306.0" layoutY="434.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace9" fitHeight="27.0" fitWidth="16.0" layoutX="322.0" layoutY="434.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace10" fitHeight="27.0" fitWidth="16.0" layoutX="338.0" layoutY="434.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace11" fitHeight="27.0" fitWidth="16.0" layoutX="352.0" layoutY="434.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace12" fitHeight="27.0" fitWidth="16.0" layoutX="367.0" layoutY="432.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="councilPalaceButton" layoutX="260.0" layoutY="404.0" mnemonicParsing="false" onMouseClicked="#openPrivilegeCouncil" opacity="0.0" prefHeight="55.0" prefWidth="153.0" />
-      <ImageView fx:id="productionRight1" fitHeight="27.0" fitWidth="16.0" layoutX="144.0" layoutY="590.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="productionRight2" fitHeight="27.0" fitWidth="16.0" layoutX="160.0" layoutY="588.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="productionRight3" fitHeight="27.0" fitWidth="16.0" layoutX="176.0" layoutY="588.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="productionRight4" fitHeight="27.0" fitWidth="16.0" layoutX="194.0" layoutY="590.0"  pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="productionRight1" fitHeight="27.0" fitWidth="16.0" layoutX="144.0" layoutY="590.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="productionRight2" fitHeight="27.0" fitWidth="16.0" layoutX="160.0" layoutY="588.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="productionRight3" fitHeight="27.0" fitWidth="16.0" layoutX="176.0" layoutY="588.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="productionRight4" fitHeight="27.0" fitWidth="16.0" layoutX="194.0" layoutY="590.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="productionRight5" fitHeight="27.0" fitWidth="16.0" layoutX="211.0" layoutY="588.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="harvestRight1" fitHeight="27.0" fitWidth="16.0" layoutX="136.0" layoutY="647.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="harvestRight2" fitHeight="27.0" fitWidth="16.0" layoutX="152.0" layoutY="647.0"  pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="harvestRight3" fitHeight="27.0" fitWidth="16.0" layoutX="168.0" layoutY="647.0"  pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="harvestRight1" fitHeight="27.0" fitWidth="16.0" layoutX="136.0" layoutY="647.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="harvestRight2" fitHeight="27.0" fitWidth="16.0" layoutX="152.0" layoutY="647.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="harvestRight3" fitHeight="27.0" fitWidth="16.0" layoutX="168.0" layoutY="647.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="harvestRight4" fitHeight="27.0" fitWidth="16.0" layoutX="186.0" layoutY="647.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="harvestRight5" fitHeight="27.0" fitWidth="16.0" layoutX="203.0" layoutY="647.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="110.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnProductionRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
@@ -121,7 +126,7 @@
       <TextField fx:id="blackDice" layoutX="294.0" layoutY="647.0" opacity="0.56" prefHeight="0.0" prefWidth="28.0" />
       <TextField fx:id="whiteDice" layoutX="340.0" layoutY="647.0" opacity="0.59" prefHeight="15.0" prefWidth="28.0" />
       <TextField fx:id="orangeDice" layoutX="387.0" layoutY="647.0" opacity="0.4" prefHeight="15.0" prefWidth="28.0" />
-      <TextField fx:id="valueWithServant" layoutX="1008.0" layoutY="138.0" prefHeight="27.0" prefWidth="40.0" />
-      <Text layoutX="927.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="With value:" />
+      <TextField fx:id="valueWithServant" layoutX="1008.0" layoutY="138.0" onAction="#setValueWithServant" prefHeight="27.0" prefWidth="40.0" />
+      <Text layoutX="927.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add servant:" />
    </children>
 </AnchorPane>
