--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -128,5 +128,9 @@
       <TextField fx:id="orangeDice" layoutX="387.0" layoutY="647.0" opacity="0.4" prefHeight="15.0" prefWidth="28.0" />
       <TextField fx:id="valueWithServant" layoutX="1008.0" layoutY="138.0" onAction="#setValueWithServant" prefHeight="27.0" prefWidth="40.0" />
       <Text layoutX="927.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add servant:" />
+      <ImageView fx:id="current1" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="386.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="current2" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="409.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="current3" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="430.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="current4" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="459.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
