--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.MotionBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -132,5 +134,11 @@
       <ImageView fx:id="current2" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="409.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current3" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="430.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current4" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="459.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="nameFxml" layoutX="723.0" layoutY="66.0" prefHeight="31.0" prefWidth="226.0">
+         <effect>
+            <MotionBlur angle="360.0" radius="30.73" />
+         </effect>
+      </Label>
+      <TextField fx:id="name" layoutX="650.0" layoutY="41.0" opacity="0.0" prefHeight="31.0" prefWidth="153.0" />
    </children>
 </AnchorPane>
