--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -127,7 +127,7 @@
       <TextField fx:id="whiteDice" editable="false" layoutX="340.0" layoutY="647.0" opacity="0.59" prefHeight="15.0" prefWidth="28.0" />
       <TextField fx:id="orangeDice" editable="false" layoutX="387.0" layoutY="647.0" opacity="0.4" prefHeight="15.0" prefWidth="28.0" />
       <TextField fx:id="valueWithServant" layoutX="1008.0" layoutY="138.0" onAction="#setValueWithServant" prefHeight="27.0" prefWidth="40.0" />
-      <Text layoutX="927.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add servant:" />
+      <Text fx:id="addServant" layoutX="927.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add servant:" />
       <ImageView fx:id="current1" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="386.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current2" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="409.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current3" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="430.0" pickOnBounds="true" preserveRatio="true" />
@@ -135,5 +135,6 @@
       <TextField fx:id="name" editable="false" layoutX="599.0" layoutY="24.0" prefHeight="31.0" prefWidth="153.0" />
       <TextField fx:id="currentPlayer" editable="false" layoutX="599.0" layoutY="73.0" prefHeight="31.0" prefWidth="153.0" />
       <TextField fx:id="color" editable="false" layoutX="776.0" layoutY="24.0" prefHeight="31.0" prefWidth="153.0" />
+      <Text fx:id="nameFxml" layoutX="792.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" />
    </children>
 </AnchorPane>
