--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -5,11 +5,12 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.BoardController">
    <children>
-      <ImageView fitHeight="736.0" fitWidth="1120.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="736.0" fitWidth="1120.0" layoutY="-5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-5.0">
          <image>
             <Image url="@../Images/background.jpg" />
          </image>
@@ -91,9 +92,6 @@
       <ImageView fx:id="market2" fitHeight="31.0" fitWidth="28.0" layoutX="347.0" layoutY="573.0" onMouseClicked="#putRelativeOnMarket2" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="market3" fitHeight="31.0" fitWidth="28.0" layoutX="397.0" layoutY="589.0" onMouseClicked="#putRelativeOnMarket3" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="market4" fitHeight="31.0" fitWidth="28.0" layoutX="425.0" layoutY="619.0" onMouseClicked="#openPrivilegeCouncilForMarket4" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="294.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="346.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="387.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="councilPalace1" fitHeight="27.0" fitWidth="16.0" layoutX="286.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="councilPalace2" fitHeight="27.0" fitWidth="16.0" layoutX="300.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="councilPalace3" fitHeight="27.0" fitWidth="16.0" layoutX="314.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true" />
@@ -119,22 +117,59 @@
       <ImageView fx:id="harvestRight5" fitHeight="27.0" fitWidth="16.0" layoutX="203.0" layoutY="647.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="110.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnProductionRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
       <Button layoutX="110.0" layoutY="639.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnHarvestRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
-      <TextField fx:id="coin" editable="false" layoutX="636.0" layoutY="700.0" opacity="0.56" prefHeight="15.0" prefWidth="28.0" />
-      <TextField fx:id="wood" editable="false" layoutX="719.0" layoutY="700.0" opacity="0.56" prefHeight="15.0" prefWidth="28.0" />
-      <TextField fx:id="stone" editable="false" layoutX="797.0" layoutY="700.0" opacity="0.56" prefHeight="15.0" prefWidth="28.0" />
-      <TextField fx:id="servant" editable="false" layoutX="866.0" layoutY="700.0" opacity="0.56" prefHeight="15.0" prefWidth="28.0" />
-      <TextField fx:id="blackDice" editable="false" layoutX="294.0" layoutY="647.0" opacity="0.56" prefHeight="0.0" prefWidth="28.0" />
-      <TextField fx:id="whiteDice" editable="false" layoutX="340.0" layoutY="647.0" opacity="0.59" prefHeight="15.0" prefWidth="28.0" />
-      <TextField fx:id="orangeDice" editable="false" layoutX="387.0" layoutY="647.0" opacity="0.4" prefHeight="15.0" prefWidth="28.0" />
-      <TextField fx:id="valueWithServant" layoutX="1008.0" layoutY="138.0" onAction="#setValueWithServant" prefHeight="27.0" prefWidth="40.0" />
       <Text fx:id="addServant" layoutX="927.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add servant:" />
       <ImageView fx:id="current1" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="386.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current2" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="409.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current3" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="430.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current4" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="459.0" pickOnBounds="true" preserveRatio="true" />
-      <TextField fx:id="name" editable="false" layoutX="599.0" layoutY="24.0" prefHeight="31.0" prefWidth="153.0" />
-      <TextField fx:id="currentPlayer" editable="false" layoutX="599.0" layoutY="73.0" prefHeight="31.0" prefWidth="153.0" />
-      <TextField fx:id="color" editable="false" layoutX="776.0" layoutY="24.0" prefHeight="31.0" prefWidth="153.0" />
-      <Text fx:id="nameFxml" layoutX="792.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Text fx:id="name" fill="#57250d" layoutX="622.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="170.00000831484795">
+         <font>
+            <Font name="Blackadder ITC" size="33.0" />
+         </font>
+      </Text>
+      <Text fx:id="currentPlayer" fill="#57250d" layoutX="615.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="415.00000831484795">
+         <font>
+            <Font name="Blackadder ITC" size="29.0" />
+         </font>
+      </Text>
+      <Text fx:id="color" fill="#57250d" layoutX="818.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="217.00000831484795">
+         <font>
+            <Font name="Blackadder ITC" size="33.0" />
+         </font>
+      </Text>
+      <Text fx:id="stone" fill="#57250d" layoutX="796.0" layoutY="711.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="36.000008314847946">
+         <font>
+            <Font name="Blackadder ITC" size="35.0" />
+         </font>
+      </Text>
+   
+  
+      <Text fx:id="wood" fill="#57250d" layoutX="714.0" layoutY="710.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="36.000008314847946">
+         <font>
+            <Font name="Blackadder ITC" size="35.0" />
+         </font>
+      </Text>
+      <Text fx:id="coin" fill="#57250d" layoutX="639.0" layoutY="710.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="36.000008314847946">
+         <font>
+            <Font name="Blackadder ITC" size="35.0" />
+         </font>
+      </Text>
+      <Text fx:id="orangeDice" fill="#57250d" layoutX="387.0" layoutY="674.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="36.00000619888306">
+         <font>
+            <Font name="Blackadder ITC" size="35.0" />
+         </font>
+      </Text>
+      <Text fx:id="whiteDice" fill="#57250d" layoutX="336.0" layoutY="668.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="36.00000619888306">
+         <font>
+            <Font name="Blackadder ITC" size="35.0" />
+         </font>
+      </Text>
+      <Text fx:id="blackDice" fill="#57250d" layoutX="292.0" layoutY="667.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="36.00000619888306">
+         <font>
+            <Font name="Blackadder ITC" size="35.0" />
+         </font>
+      </Text>
+      <TextField fx:id="servant" layoutX="1002.0" layoutY="138.0" prefHeight="31.0" prefWidth="28.0" />
+      <Button fx:id="switchTurn" layoutX="1048.0" layoutY="139.0" mnemonicParsing="false" text="Switch" />
    </children>
 </AnchorPane>
