--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -8,40 +8,40 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.BoardController">
+<AnchorPane prefHeight="720.0" prefWidth="1215.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.BoardController">
    <children>
-      <ImageView fitHeight="736.0" fitWidth="1120.0" layoutY="-5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-5.0">
+      <ImageView fitHeight="736.0" fitWidth="1215.0" layoutY="-5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-5.0">
          <image>
             <Image url="@../Images/background.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="303.0" fitWidth="51.0" layoutX="565.0" layoutY="432.0">
+      <ImageView fitHeight="303.0" fitWidth="51.0" layoutX="565.0" layoutY="422.0">
          <image>
             <Image url="@../Images/personalbonustile.png" />
          </image>
       </ImageView>
-      <Button fx:id="quit" layoutX="1061.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#quit" prefHeight="10.0" prefWidth="51.0" text="Quit" />
-      <Button fx:id="black" layoutX="618.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseBlackRelative" text="Black" />
+      <Button fx:id="quit" layoutX="1150.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#quit" prefHeight="10.0" prefWidth="51.0" text="Quit" />
+      <Button fx:id="black" layoutX="617.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseBlackRelative" text="Black" />
       <Button fx:id="white" layoutX="690.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseWhiteRelative" text="White" />
       <Button fx:id="neutral" layoutX="848.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseNeutralRelative" text="Neutral" />
       <Button fx:id="orange" layoutX="765.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseOrangeRelative" text="Orange" />
-      <ImageView fitHeight="736.0" fitWidth="565.0">
+      <ImageView fitHeight="726.0" fitWidth="565.0">
          <image>
             <Image url="@../Images/gameboard.png" />
          </image>
       </ImageView>
       <ImageView fx:id="characterTower2" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="237.0" onMouseClicked="#putRelativeOnCharacter2" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="303.0" fitWidth="468.0" layoutX="618.0" layoutY="432.0">
+      <ImageView fitHeight="303.0" fitWidth="468.0" layoutX="618.0" layoutY="422.0">
          <image>
             <Image url="@../Images/PLANCIA.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="120.0" fitWidth="468.0" layoutX="618.0" layoutY="317.0">
+      <ImageView fitHeight="120.0" fitWidth="468.0" layoutX="618.0" layoutY="303.0">
          <image>
             <Image url="@../Images/PLANCIA%20BLU%20copia.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="131.0" fitWidth="468.0" layoutX="618.0" layoutY="188.0">
+      <ImageView fitHeight="131.0" fitWidth="468.0" layoutX="618.0" layoutY="172.0">
          <image>
             <Image url="@../Images/PLANCIA%20VIOLA.jpg" />
          </image>
@@ -122,17 +122,17 @@
       <ImageView fx:id="current2" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="409.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current3" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="430.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="current4" fitHeight="31.0" fitWidth="28.0" layoutX="415.0" layoutY="459.0" pickOnBounds="true" preserveRatio="true" />
-      <Text fx:id="name" fill="#57250d" layoutX="622.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="170.00000831484795">
+      <Text fx:id="name" fill="#57250d" layoutX="576.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="170.00000831484795">
          <font>
             <Font name="Blackadder ITC" size="33.0" />
          </font>
       </Text>
-      <Text fx:id="currentPlayer" fill="#57250d" layoutX="615.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="415.00000831484795">
+      <Text fx:id="currentPlayer" fill="#57250d" layoutX="577.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="415.00000831484795">
          <font>
             <Font name="Blackadder ITC" size="29.0" />
          </font>
       </Text>
-      <Text fx:id="color" fill="#57250d" layoutX="818.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="217.00000831484795">
+      <Text fx:id="color" fill="#57250d" layoutX="756.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="217.00000831484795">
          <font>
             <Font name="Blackadder ITC" size="33.0" />
          </font>
@@ -182,5 +182,15 @@
       <Text fx:id="militaryPoint" layoutX="841.0" layoutY="660.0" strokeType="OUTSIDE" strokeWidth="0.0" />
       <Text layoutX="874.0" layoutY="660.0" strokeType="OUTSIDE" strokeWidth="0.0" text="VictoryPoint: " />
       <Text fx:id="victoryPoint" layoutX="966.0" layoutY="660.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="1.0" />
+      <Text fx:id="roundFxml" fill="#511a09" layoutX="1041.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="140.13671875">
+         <font>
+            <Font name="Blackadder ITC" size="26.0" />
+         </font>
+      </Text>
+      <Text fill="#51210b" layoutX="1048.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="140.13671875">
+         <font>
+            <Font name="Blackadder ITC" size="26.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
