--- a/src/main/java/gui/NotYorTurn.fxml
+++ b/src/main/java/gui/NotYorTurn.fxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="112.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="112.0" prefWidth="413.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="23.0" layoutY="23.0" prefHeight="61.0" prefWidth="578.0" text="It's not your turn! Wait!" />
+      <ImageView fitHeight="112.0" fitWidth="414.0">
+         <image>
+            <Image url="@../Images/background.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="23.0" layoutY="23.0" prefHeight="68.0" prefWidth="395.0" text="It's not your turn! Wait!" textFill="#572209">
+         <font>
+            <Font name="Blackadder ITC" size="41.0" />
+         </font></Label>
    </children>
 </AnchorPane>
